# rss2016-team2

./: .gitignore  upload6
car_controller/: .___init__.py  ._setup.py  CMakeLists.txt  package.xml  racecar.xml  racecar_env.sh  setup.py  workflow.xml
car_controller/launch/: ._wall_follower.launch  car.launch  wall_follower.launch
car_controller/scripts/: car.py
car_msgs/: CMakeLists.txt  package.xml
car_msgs/msg/: DirectDrive.msg  HighControl.msg
cone_follower/: CMakeLists.txt  package.xml  readme
cone_follower/launch/: car.launch  cone_follower.launch  control.launch
cone_follower/msg/: PolarPoints.msg
cone_follower/scripts/: coord.py  detect.py  follow.py  key_points_detector.py  test.py
data/: lab.map.pgm  lab.map.yaml
goal_point_manager/launch/: goal_point_manager.launch
goal_point_manager/scripts/: .goal_point_manager.py.swp  goal_point_manager.py
greenCam/launch/: greenCam.launch
greenCam/scripts/: greenCam.py
local_costmap/: CMakeLists.txt  package.xml  requirements.txt
local_costmap/config/: config.yaml  config.yaml.bak  dynamics.yaml  model.yaml  opt_config.yaml
local_costmap/launch/: explore.launch  greenCam.launch  race.launch
local_costmap/progress/: 4.24.controller_v1.txt
local_costmap/scripts/: ._local_costmap.py  (+28 more)
localization/: CMakeLists.txt  package.xml
rviz-configs/: corey_localize.rviz  hmap.rviz  localcostmap.rviz  localization.rviz  localize.rviz  standard.rviz
slammer/: CMakeLists.txt  package.xml
test_module/: CMakeLists.txt  package.xml  simulation_env.sh
wall_follower/: CMakeLists.txt  package.xml
(+59 files in other folders)
