<?xml version="1.0"?>
<package>
  <name>car_msgs</name>
  <version>0.0.1</version>
  <description>
    ROS message definitions for RSS team 2.
  </description>

  <maintainer email="chwalsh@mit.edu">Corey Walsh</maintainer>
  <author email="chwalsh@mit.edu">Corey Walsh</author>
  <license>MIT</license>

  <!-- <url type="website">http://ros.org/wiki/car_msgs</url> -->
  <url type="repository">https://github.mit.edu/rss2016-team2/racecar</url>
  <url type="bugtracker">https://github.mit.edu/rss2016-team2/racecar/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
